Fixing general errors

--- a/templates/typescript/handler.njk
+++ b/templates/typescript/handler.njk
@@ -5,9 +5,8 @@ import {JSONAPIDataResponse } from '@basuapi/api';
 
 
 {% for m in methods %}
-export default async (request: Request, context: any) => {
-  const method = request.method;
-  if (request.method === "{{ m.item.method }}"){
+export const handler = async (request: Request, context: any) => {
+  if (request.method.toLowerCase() === "{{ m.item.method }}"){
     const result = await {{routeMethod}}{{m.routePath}}.{{m.method}}(getParamData(request)) as any as JSONAPIDataResponse;
 
     return context.json(result.data);
